{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 19,
  "lineage": "92546da6-6659-a117-acbe-bc25671aa37a",
  "resources": [
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:342134162356:internet-gateway/igw-05cadd81e6f7c88c5",
            "id": "igw-05cadd81e6f7c88c5",
            "owner_id": "342134162356",
            "tags": {
              "Name": "ndnp-open-ocr-igw"
            },
            "tags_all": {
              "Name": "ndnp-open-ocr-igw"
            },
            "vpc_id": "vpc-07ead862c40243b4d"
          },
          "dependencies": [
            "module.ecs-fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:342134162356:route-table/rtb-0be41d1e9fbf1dc27",
            "id": "rtb-0be41d1e9fbf1dc27",
            "owner_id": "342134162356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cadd81e6f7c88c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ndnp-open-ocr-route-table"
            },
            "tags_all": {
              "Name": "ndnp-open-ocr-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ead862c40243b4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-fargate.aws_internet_gateway.main",
            "module.ecs-fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ec91ec1a169983a",
            "route_table_id": "rtb-0be41d1e9fbf1dc27",
            "subnet_id": "subnet-08b5db20f7bf592d6"
          },
          "dependencies": [
            "module.ecs-fargate.aws_internet_gateway.main",
            "module.ecs-fargate.aws_route_table.main",
            "module.ecs-fargate.aws_subnet.subnet_1",
            "module.ecs-fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aeb728348410f69",
            "route_table_id": "rtb-0be41d1e9fbf1dc27",
            "subnet_id": "subnet-01d2529f01265bf0b"
          },
          "dependencies": [
            "module.ecs-fargate.aws_internet_gateway.main",
            "module.ecs-fargate.aws_route_table.main",
            "module.ecs-fargate.aws_subnet.subnet_2",
            "module.ecs-fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:342134162356:security-group/sg-0288d6b5bff07f085",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0288d6b5bff07f085",
            "ingress": [],
            "name": "terraform-20240915192247589100000001",
            "name_prefix": "terraform-",
            "owner_id": "342134162356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ndnp-open-ocr-sg"
            },
            "tags_all": {
              "Name": "ndnp-open-ocr-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ead862c40243b4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:342134162356:subnet/subnet-08b5db20f7bf592d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b5db20f7bf592d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342134162356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ndnp-open-ocr-subnet-1"
            },
            "tags_all": {
              "Name": "ndnp-open-ocr-subnet-1"
            },
            "vpc_id": "vpc-07ead862c40243b4d"
          },
          "dependencies": [
            "module.ecs-fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:342134162356:subnet/subnet-01d2529f01265bf0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d2529f01265bf0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342134162356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ndnp-open-ocr-subnet-2"
            },
            "tags_all": {
              "Name": "ndnp-open-ocr-subnet-2"
            },
            "vpc_id": "vpc-07ead862c40243b4d"
          },
          "dependencies": [
            "module.ecs-fargate.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:342134162356:vpc/vpc-07ead862c40243b4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d724a5e6a13fa96",
            "default_route_table_id": "rtb-0cf5e0aab0bfb92a4",
            "default_security_group_id": "sg-09f57234bd9fd77c4",
            "dhcp_options_id": "dopt-a135a7c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ead862c40243b4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf5e0aab0bfb92a4",
            "owner_id": "342134162356",
            "tags": {
              "Name": "ndnp-open-ocr-vpc"
            },
            "tags_all": {
              "Name": "ndnp-open-ocr-vpc"
            }
          }
        }
      ]
    }
  ]
}